--- a/0publish-gui.xml.template
+++ b/0publish-gui.xml.template
@@ -33,7 +33,9 @@ these feeds.</description>
       <environment insert="ROX-Lib2/python" name="PYTHONPATH"/>
     </requires>
 
-    <!-- Use very high version number to treat local build as newer than any public version. -->
-    <implementation id="local" version="100-pre" stability="developer" local-path="."/>
+    <implementation version="{version}" local-path=".">
+      <manifest-digest/>
+      <archive href="0publish-gui-{version}.tar.bz2"/>
+    </implementation>
   </group>
 </interface>
